tests/compile_fail/borrow_mut/unknown_struct_attr_arg.rs
#[derive(derive_more::BorrowMut)]
#[borrow_mut(baz)]
struct Foo(i32);

fn main() {}
