tests/compile_fail/borrow_mut/unknown_struct_attr_arg.stderr
error: only `forward` allowed here
 --> tests/compile_fail/borrow_mut/unknown_struct_attr_arg.rs:2:14
  |
2 | #[borrow_mut(baz)]
  |              ^^^
